[package]
name = "colink-protocol-telegram-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
colink = "0.1.18"
prost = "0.10"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde_json = "1.0"
tokio = "1.18"
tracing = "0.1"
uuid = { version = "0.8", features = ["v4"] }
