[package]
name = "colink-protocol-telegram-bot"
version = "0.1.3"
edition = "2021"

[dependencies]
colink = "0.3.2"
prost = "0.10"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde_json = "1.0"
tokio = "1.24"
tracing = "0.1"
uuid = { version = "0.8", features = ["v4"] }
